# kirill

./: .dockerignore  .rubberstamp  .tool-versions  CONFIGURATION.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  INSTALL.md  LICENSE.md  README.md  USAGE.md  build  docker-bake.hcl  go.mod  go.sum  install  install-kirill  install.mk  makefile  rockhopper.toml  tinyrick.rs  uninstall-kirill  upload
.github/workflows/: lint.yml
examples/: books.json5  fruit-missing-end-brace.json  fruit-trailing-comma.json  fruit-unquoted-key.json  fruit-with-comment.json  fruit.json  grocer-missing-document-envelope.json  grocer.json  species.json
examples/zoo/: bad-bear.json  black-bear.json  brown-bear.json  lion.json  polar-bear.json  tiger.json
src/: kirill.rs  lib.rs
