[package]
name = "kirill"
description = "JSON Schema validator"
version = "0.0.3"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/mcandre/kirill"

[dependencies]
clean-path = "=0.2.1"
die = "=0.2.0"
getopts = "=0.2.21"
json-schema-validator-core = "1.0.0"
lazy_static = "1.4.0"
regex = "1.7.3"
serde_json = "1.0.145"
tinyrick = { version = "=0.0.15", optional = true }
tinyrick_extras = { version = "=0.0.9", optional = true }
walkdir = "2.3.3"

[features]
letmeout = ["tinyrick", "tinyrick_extras"]

[lib]
name = "kirill"

[[bin]]
name = "kirill"
path = "src/kirill.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
