[package]
name = "kirill"
description = "JSON Schema validator"
version = "0.0.6"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/mcandre/kirill"

[dependencies]
clean-path = "0.2.1"
die = "0.2.0"
getopts = "0.2.24"
json-schema-validator-core = "1.0.0"
regex = "1.12.2"
serde_json = "1.0.145"
serde_json5 = "0.2.1"
walkdir = "2.5.0"

[lib]
name = "kirill"

[[bin]]
name = "kirill"
path = "src/kirill.rs"
